Bug 450512 - There is no way to get back to the main screen
Summary: There is no way to get back to the main screen
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-18 11:22 UTC by Riccardo Robecchi
Modified: 2022-04-01 10:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Riccardo Robecchi 2022-02-18 11:22:12 UTC
SUMMARY
Filelight presents a useful main screen with a collection of partitions to analyse. Once a partition is selected, though, there is no way to get back to the main screen and explore other partitions. This feature would make it easier to use Filelight to less technical savvy users.

STEPS TO REPRODUCE
1. Select a partition from the main screen. 

OBSERVED RESULT
There is no way to go back to the main screen.

EXPECTED RESULT
There is a way to go back to the main screen.

SOFTWARE/OS VERSIONS
Linux: KDE neon
KDE Plasma Version: 5.24.1
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-03-21 08:24:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/filelight/-/merge_requests/20
Comment 2 Harald Sitter 2022-04-01 10:11:24 UTC
Git commit 182c6dfa67bcd6caa0dbf2903fc54479267d531b by Harald Sitter.
Committed on 01/04/2022 at 10:00.
Pushed by sitter into branch 'master'.

add a go to overview action

previously there was no real way to get back to the mainpage. it's all a
bit awkward because of how state management works, but I don't
realistically see that improving a lot with qwidgets. in kirigami we can
do it smarter while porting, if we ever port

in the meantime this adds an overview button to the toolbar which shows
the summary widget

M  +2    -1    misc/filelightui.rc
M  +17   -3    src/mainWindow.cpp
M  +1    -0    src/mainWindow.h

https://invent.kde.org/utilities/filelight/commit/182c6dfa67bcd6caa0dbf2903fc54479267d531b